// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Row > should render 1`] = `
<div>
  <div
    class="flex justify-between items-center space-x-4"
  >
    <div
      class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
    >
      Hello World
    </div>
  </div>
</div>
`;

exports[`Row > should render responsive wrapper 1`] = `
<div>
  <div
    class="flex justify-between items-center space-x-4"
  >
    <div
      class="relative m-0 font-semibold text-left select-none first:pl-0 last:pr-0 text-md group border-theme-secondary-300 text-theme-secondary-700 dark:border-theme-secondary-800 dark:text-theme-secondary-500"
    >
      Hello World
    </div>
    <div
      class="flex w-full text-right"
    >
      <div
        class="flex overflow-hidden flex-1 justify-end items-center w-0"
      >
        The address
      </div>
    </div>
  </div>
</div>
`;
